<resources>
    <string name="app_name">WeatherNow</string>

    <!--Permissions Dexter-->
    <string name="denied_permission_permanently">No puede acceder a esta funcionalidad, ha negado         los permisos. Debe activar los permisos manualmente</string>
    <string name="place">QUITO</string>
    <string name="degrees_celsius">90º</string>

    <string name="humidity_title">HUMIDITY</string>
    <string name="precipitation_title">PRECIPITATION</string>

    <string name="humidity_description">no available</string>
    <string name="precipitation_description">no available</string>
    <string name="summary">Summary</string>

    <!--Location-->
    <string name="permission_location_error">No ha concedido permisos para su Ubicacion</string>\
    <string name="success_messages"></string>
    <string name="error_play_services">Debe actualizar o instalar Google Play Services</string>
    <string name="error_not_available_play_services">Este dispositivo no Soporta Google Play Services</string>
    <string name="temperature">%1$dº</string>
    <string name="not_internet_connection">No Dispone de conexión a Internet</string>
    <string name="not_get_info_api">No se pudo obtener Información del Clima</string>

</resources>
