<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlue"
    tools:context="creapption.com.weathernow.main.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp"/>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/degrees_celsius"
                android:gravity="center_horizontal"
                android:textSize="120sp"
                android:textColor="@color/colorWhite"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <TextView
                android:id="@+id/permission_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/permission_location_error"
                android:textColor="@color/colorError"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="visible" />
            <TextView
                android:id="@+id/connection_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/permission_location_error"
                android:textColor="@color/colorError"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="gone" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView5"
                        style="@style/TitleWeather"
                        android:text="@string/humidity_title"/>

                    <TextView
                        android:id="@+id/humidity"
                        style="@style/TitleWeather"
                        android:text="@string/humidity_description" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView6"
                        style="@style/TitleWeather"
                        android:text="@string/precipitation_title" />

                    <TextView
                        android:id="@+id/precipitation"
                        style="@style/TitleWeather"
                        android:text="@string/precipitation_description" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary"
                android:layout_gravity="center_horizontal"
                android:paddingTop="20dp"
                android:textSize="30sp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/refresh_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription=""
                android:padding="20sp"
                app:srcCompat="@drawable/ic_reload" />
        </LinearLayout>

        <!---->

    </ScrollView>
</LinearLayout>
